--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "masx200 Kedmi <git@dns.google> (https://dns.google)",
   "license": "MIT",
   "scripts": {
+    "test:dohforcedIP":"node test-simple-forced.js",
     "start": "node example/index.js",
     "prettier:check": "prettier --list-different index.js",
     "eslint": "eslint index.js",
